tests/NormalTests/paczka1/small_fuzzy/91896724.err
Error in line 1: 2zdAHxmZV A360 71,5
Error in line 5: 2zdAHxmZV A360 85,0
